--- a/Bruce2/Bruce2.vcxproj
+++ b/Bruce2/Bruce2.vcxproj
@@ -42,6 +42,10 @@
     <IncludePath>$(SolutionDir)SDL2_203_Pack\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)SDL2_203_Pack\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>$(SolutionDir)SDL2_203_Pack\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)SDL2_203_Pack\lib\x86;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -66,6 +70,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -74,6 +80,8 @@
     <ClCompile Include="AwcColor.cpp" />
     <ClCompile Include="AwcUtility.cpp" />
     <ClCompile Include="AwcVector2D.cpp" />
+    <ClCompile Include="AWindow.cpp" />
+    <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -82,7 +90,10 @@
     <ClInclude Include="AwcColor.h" />
     <ClInclude Include="AwcUtility.h" />
     <ClInclude Include="AwcVector2D.h" />
+    <ClInclude Include="AWindow.h" />
     <ClInclude Include="Command.h" />
+    <ClInclude Include="Globals.h" />
+    <ClInclude Include="InputHandler.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
