--- a/Bruce2/Bruce2.vcxproj
+++ b/Bruce2/Bruce2.vcxproj
@@ -76,6 +76,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AMouse.cpp" />
+    <ClCompile Include="ARender.cpp" />
+    <ClCompile Include="ASurface.cpp" />
     <ClCompile Include="ATexture.cpp" />
     <ClCompile Include="AwcColor.cpp" />
     <ClCompile Include="AwcUtility.cpp" />
@@ -89,6 +91,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AMouse.h" />
+    <ClInclude Include="ARender.h" />
+    <ClInclude Include="ASurface.h" />
     <ClInclude Include="ATexture.h" />
     <ClInclude Include="AwcColor.h" />
     <ClInclude Include="AwcUtility.h" />
