--- a/Bruce2/Bruce2.vcxproj.filters
+++ b/Bruce2/Bruce2.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="CSprite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ARender.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ASurface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AMouse.h">
@@ -93,6 +99,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CSprite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ARender.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ASurface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
